--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   },
   "rules": {
     "@typescript-eslint/semi": ["error", "never"],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "import/prefer-default-export": "off"
   }
 }
